# Crewai_financial_chatbot

financial/: README.md  conversation_log.txt  pyproject.toml
financial/db/: chroma.sqlite3
financial/src/financial/: crew.py  main.py
financial/src/financial/config/: agents.yaml  tasks.yaml
