[project]
name = "financial"
version = "0.1.0"
description = "financial using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
financial = "financial.main:run"
run_crew = "financial.main:run"
train = "financial.main:train"
replay = "financial.main:replay"
test = "financial.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
